...
        floatingActionButton = {
            FloatingActionButton(onClick = {
                viewModel.onEvent(NoteEvent.SaveNote)
            }, backgroundColor = MaterialTheme.colors.primary) {
                Icon(
                    imageVector = Icons.Default.Save,
                    contentDescription = "Save note",
                    tint = MaterialTheme.colors.background
                )
            }
        },
        scaffoldState = scaffoldState,
        backgroundColor = backgroundColor.value
...
